[package]
name = "ink"
version = "0.0.1"
edition = "2018"
authors = ["Kathryn Long <squeeself@gmail.com>"]
publish = false

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
log = "0.4.1"
failure = "0.1.2"
bitflags = "1.0"
encoding_rs_io = "0.1.2"
string-interner = "0.7"
lazy_static = "1.1"
once_cell = "0.1.6"
